@@ -1,62 +1,69 @@
-                            <form action="{site_admin_url}/user.php" method="post">
-                                <table cellspacing="0" cellpadding="3" width="100%">
-                                    <tr>
-                                        <td class="alignright">{lang_userid}:</td>
-                                        <td>{user_id}<input type="hidden" name="uid" value="{user_id}"{xhtml}></td>
-                                    </tr>
-                                    <tr>
-                                        <td class="alignright">{lang_regdate}:</td>
-                                        <td>
-                                            <input type="hidden" name="regdate" value="{regdate_timestamp}"{xhtml}>{user_regdate}</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="alignright">{lang_lastlogin}:</td>
-                                        <td>{user_lastlogin}</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="alignright" style="vertical-align:top;">{lang_username}:</td>
-                                        <td>
-                                            <input type="text" size="16" maxlength="16" name="username" value="{username}"{xhtml}><br{xhtml}><br{xhtml}>
-                                            {user_photo}<br{xhtml}>
-                                            {lang_delete_photo} {delete_photo_option}
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td class="alignright">{lang_fullname}:</td>
-                                        <td><input type="text" size="48" maxlength="80" name="fullname" value="{user_fullname}"{xhtml}></td>
-                                    </tr>
-                                    <tr>
-                                        <td class="alignright">{lang_password}:</td>
-                                        <td><input type="password" size="16" name="passwd" value=""{xhtml}></td>
-                                    </tr>
-                                    <tr>
-                                        <td class="alignright">{lang_password_conf}:</td>
-                                        <td><input type="password" size="16" name="passwd_conf" value=""{xhtml}></td>
-                                    </tr>
-                                    <tr>
-                                        <td class="alignright">{lang_emailaddress}:</td>
-                                        <td><input type="text" size="48" maxlength="255" name="email" value="{user_email}"{xhtml}></td>
-                                    </tr>
-                                    <tr>
-                                        <td class="alignright">{lang_homepage}:</td>
-                                        <td><input type="text" size="48" maxlength="255" name="homepage" value="{user_homepage}"{xhtml}></td>
-                                    </tr>
-                                    <tr>
-                                        <td class="alignright">{lang_user_status}:</td>
-                                        <td>{user_status}</td>
-                                    </tr>
-                                    <tr>
-                                        <td colspan="2"><hr{xhtml}></td>
-                                    </tr>
-                                    {group_edit}
-                                    <tr><td>&nbsp;</td></tr>
-                                    <tr>
-                                        <td colspan="2">
-                                            <input type="submit" value="{lang_save}" name="mode"{xhtml}>
-                                            <input type="submit" value="{lang_cancel}" name="mode"{xhtml}>
-                                            {delete_option}
-                                            <input type="hidden" name="{gltoken_name}" value="{gltoken}"{xhtml}>
-                                        </td>
-                                    </tr>
-                                </table>
-                            </form>
+<form action="{site_admin_url}/user.php" method="post">
+<table cellspacing="0" cellpadding="3" width="100%">
+<tr>
+    <td class="alignright">{lang_userid}:</td>
+    <td>{user_id}<input type="hidden" name="uid" value="{user_id}"{xhtml}></td>
+</tr>
+<tr>
+    <td class="alignright">{lang_regdate}:</td>
+    <td>
+        <input type="hidden" name="regdate" value="{regdate_timestamp}"{xhtml}>{user_regdate}</td>
+</tr>
+<tr>
+    <td class="alignright">{lang_lastlogin}:</td>
+    <td>{user_lastlogin}</td>
+</tr>
+<tr>
+    <td class="alignright" style="vertical-align:top;">{lang_username}:</td>
+    <td>
+        <input type="text" size="16" maxlength="16" name="username" value="{username}"{xhtml}><br{xhtml}><br{xhtml}>
+        {user_photo}<br{xhtml}>
+        {lang_delete_photo} {delete_photo_option}
+    </td>
+</tr>
+<tr>
+    <td class="alignright">{lang_fullname}:</td>
+    <td><input type="text" size="48" maxlength="80" name="fullname" value="{user_fullname}"{xhtml}></td>
+</tr>
+<tr>
+    <td class="alignright">{lang_password}:</td>
+    <td><input type="password" size="16" name="passwd" value=""{xhtml}></td>
+</tr>
+<tr>
+    <td class="alignright">{lang_password_conf}:</td>
+    <td><input type="password" size="16" name="passwd_conf" value=""{xhtml}></td>
+</tr>
+<tr>
+    <td class="alignright">{lang_emailaddress}:</td>
+    <td><input type="text" size="48" maxlength="255" name="email" value="{user_email}"{xhtml}></td>
+</tr>
+<tr>
+    <td class="alignright">{lang_homepage}:</td>
+    <td><input type="text" size="48" maxlength="255" name="homepage" value="{user_homepage}"{xhtml}></td>
+</tr>
+<tr>
+    <td class="alignright">{lang_user_status}:</td>
+    <td>{user_status}</td>
+</tr>
+{!if newuser}
+<tr>
+    <td class="alignright">{$LANG04[28]}:</td>
+    <td><input type="checkbox" value="1" name="emailuser" /></td>
+</tr>
+{!endif}
+<tr>
+    <td colspan="2"><hr{xhtml}></td>
+</tr>
+{group_edit}
+<tr><td>&nbsp;</td></tr>
+<tr>
+    <td colspan="2">
+        <input type="submit" value="{lang_save}" name="mode"{xhtml}>
+        <input type="submit" value="{lang_cancel}" name="mode"{xhtml}>
+        {delete_option}
+        <input type="hidden" name="newuser" value="{newuser}"{xhtml}>
+        <input type="hidden" name="{gltoken_name}" value="{gltoken}"{xhtml}>
+    </td>
+</tr>
+</table>
+</form>
